--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,10 @@
 <meta charset="UTF-8">
 <title>Contact | Aesthetics By Simran Malra</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
+
 <style>
 body{
-  font-family: "Segoe UI", Arial, sans-serif;
+  font-family:"Segoe UI",Arial,sans-serif;
   background:#f7f5f2;
   margin:0;
   color:#333;
@@ -22,15 +22,20 @@ header{
 
 header h1{margin:0;font-size:32px;}
 
-nav{
-  margin-top:10px;
-}
+nav{margin-top:10px;}
 
 nav a{
   color:#fff;
   margin:0 12px;
   text-decoration:none;
-  font-weight:500;
+  font-weight:600;
+  display:inline-block;
+  transition:0.25s;
+}
+
+nav a:hover{
+  transform:translateY(-4px);
+  opacity:0.9;
 }
 
 section{
@@ -42,15 +47,9 @@ section{
   box-shadow:0 8px 20px rgba(0,0,0,0.06);
 }
 
-h2{
-  margin-top:0;
-  color:#444;
-}
+h2{margin-top:0;color:#444;}
 
-.contact-box p{
-  margin:8px 0;
-  font-size:15px;
-}
+.contact-box p{margin:8px 0;font-size:15px;}
 
 .contact-box a{
   color:#c06c84;
@@ -65,7 +64,7 @@ h2{
 }
 
 .hall-image img{
-  transform: scale(0.6);
+  transform:scale(0.6);
   border-radius:18px;
   background:#f4efe9;
   padding:6px;
@@ -77,10 +76,7 @@ h2{
   margin-bottom:18px;
 }
 
-form{
-  max-width:800px;
-  margin:auto;
-}
+form{max-width:800px;margin:auto;}
 
 .type-select{
   display:flex;
@@ -126,10 +122,7 @@ fieldset{
   border-radius:12px;
 }
 
-legend{
-  font-weight:600;
-  padding:0 10px;
-}
+legend{font-weight:600;padding:0 10px;}
 
 .services-grid{
   display:grid;
@@ -141,7 +134,6 @@ legend{
 .services-grid label{
   display:flex;
   gap:10px;
-  font-weight:normal;
   cursor:pointer;
 }
 
@@ -162,9 +154,7 @@ legend{
   cursor:pointer;
 }
 
-.send-btn:hover{
-  opacity:0.95;
-}
+.send-btn:hover{opacity:0.95;}
 
 footer{
   text-align:center;
@@ -179,9 +169,9 @@ footer{
 }
 </style>
 </head>
- 
+
 <body>
- 
+
 <header>
   <h1>Contact & Appointments</h1>
   <nav>
@@ -191,82 +181,85 @@ footer{
     <a href="contact.html">Contact</a>
   </nav>
 
-  <!-- HIDE CURRENT PAGE LINK -->
+  <!-- AUTO-HIDE CURRENT PAGE LINK -->
   <script>
-    const currentPage = window.location.pathname.split("/").pop() || "index.html";
-    document.querySelectorAll("nav a").forEach(link=>{
-      if(link.getAttribute("href") === currentPage){
-        link.style.display="none";
-      }
+    document.addEventListener("DOMContentLoaded",()=>{
+      const path=window.location.pathname.toLowerCase();
+      document.querySelectorAll("nav a").forEach(a=>{
+        const h=a.getAttribute("href").toLowerCase();
+        if(
+          (path.includes("contact") && h.includes("contact")) ||
+          (path.includes("services") && h.includes("services")) ||
+          (path.includes("about") && h.includes("about")) ||
+          ((path==="/" || path.includes("index")) && h.includes("index"))
+        ){
+          a.style.display="none";
+        }
+      });
     });
   </script>
 </header>
- 
+
 <section class="contact-box">
   <h2>Clinic Details</h2>
   <p><strong>Address:</strong> Barnala Road, near Bhuman Shah Chowk, Bhagat Singh Colony, Sirsa, Haryana 125055</p>
   <p><strong>Phone / WhatsApp:</strong> <a href="tel:+918108108042">+91 81081 08042</a></p>
 </section>
- 
+
 <div class="hall-image">
   <img src="https://raw.githubusercontent.com/Aesthetics-SimranMalra/images/main/hall.jpeg" alt="Clinic Hall">
 </div>
- 
+
 <section>
   <h2>Send Us a WhatsApp Message</h2>
   <p class="note">This form sends your message directly to our WhatsApp.</p>
- 
-  <form onsubmit="sendWhatsApp(); return false;">
- 
+
+  <form onsubmit="sendWhatsApp();return false;">
+
     <div class="type-select">
       <button type="button" id="btnQuery" onclick="setType('Query')">General Query</button>
       <button type="button" id="btnAppointment" onclick="setType('Appointment')">Book Appointment</button>
     </div>
- 
+
     <input type="hidden" id="type" required>
- 
-    <label>Full Name * <input type="text" id="name" required></label>
-    <label>Phone Number <input type="tel" id="phone"></label>
-    <label>Email Address <input type="email" id="email"></label>
- 
+
+    <label>Full Name *<input type="text" id="name" required></label>
+    <label>Phone Number<input type="tel" id="phone"></label>
+    <label>Email Address<input type="email" id="email"></label>
+
     <p class="note">Please provide at least a phone number or an email.</p>
- 
+
     <fieldset>
       <legend>Query is related to</legend>
       <div class="services-grid">
         <label><input type="checkbox" class="service" value="None"> None</label>
         <label><input type="checkbox" class="service" value="Customised Medi-Facials"> Customised Medi-Facials</label>
-        <label><input type="checkbox" class="service" value="Jet Peel Facial"> Jet Peel Facial</label>
         <label><input type="checkbox" class="service" value="Hydrafacial"> Hydrafacial</label>
-        <label><input type="checkbox" class="service" value="Microdermabrasion"> Microdermabrasion</label>
         <label><input type="checkbox" class="service" value="Laser Treatments"> Laser Treatments</label>
-        <label><input type="checkbox" class="service" value="Microneedling"> Microneedling</label>
-        <label><input type="checkbox" class="service" value="Laser Hair Reduction"> Laser Hair Reduction</label>
-        <label><input type="checkbox" class="service" value="HIFU"> Skin Tightening (HIFU)</label>
         <label><input type="checkbox" class="service" value="Botox"> Botox</label>
         <label><input type="checkbox" class="service" value="Fillers"> Fillers</label>
       </div>
     </fieldset>
- 
+
     <label>Your Message
       <textarea id="message" rows="6" placeholder="Please describe your concern or request..."></textarea>
     </label>
- 
-    <button type="submit" class="send-btn">Send via WhatsApp</button>
+
+    <button class="send-btn">Send via WhatsApp</button>
   </form>
 </section>
- 
+
 <footer>
   <p>Results may vary from person to person. All treatments are performed after consultation.</p>
 </footer>
- 
+
 <script>
-const serviceCheckboxes=document.querySelectorAll('.service');
-serviceCheckboxes.forEach(cb=>{
+const services=document.querySelectorAll('.service');
+services.forEach(cb=>{
   cb.addEventListener('change',()=>{
-    const noneChecked=[...serviceCheckboxes].find(c=>c.value==="None"&&c.checked);
-    serviceCheckboxes.forEach(c=>{
-      if(noneChecked && c.value!=="None"){
+    const none=[...services].find(c=>c.value==="None"&&c.checked);
+    services.forEach(c=>{
+      if(none && c.value!=="None"){
         c.checked=false;
         c.disabled=true;
       }else{
@@ -276,35 +269,34 @@ serviceCheckboxes.forEach(cb=>{
   });
 });
 
-function setType(value){
-  document.getElementById('type').value=value;
-  document.getElementById('btnQuery').classList.toggle('active',value==="Query");
-  document.getElementById('btnAppointment').classList.toggle('active',value==="Appointment");
+function setType(v){
+  document.getElementById('type').value=v;
+  btnQuery.classList.toggle('active',v==="Query");
+  btnAppointment.classList.toggle('active',v==="Appointment");
 }
 
 function sendWhatsApp(){
-  const type=document.getElementById('type').value;
+  const type=typeInput.value||type.value;
   const name=document.getElementById('name').value.trim();
   const phone=document.getElementById('phone').value.trim();
   const email=document.getElementById('email').value.trim();
   const msg=document.getElementById('message').value.trim();
+  if(!type){alert("Select Query or Appointment");return;}
+  if(!phone && !email){alert("Provide phone or email");return;}
 
-  if(!type){alert("Please select Query or Appointment.");return;}
-  if(!phone && !email){alert("Please provide a phone number or email.");return;}
-
-  const services=[...document.querySelectorAll('.service:checked')].map(s=>s.value).join(', ')||'Not specified';
+  const serv=[...services].filter(s=>s.checked).map(s=>s.value).join(', ')||'—';
 
   const text=`*Type:* ${type}
 *Name:* ${name}
 *Phone:* ${phone||'—'}
 *Email:* ${email||'—'}
-*Related To:* ${services}
+*Related To:* ${serv}
 
 ${msg||'—'}`;
 
   window.open("https://wa.me/918108108042?text="+encodeURIComponent(text),'_blank');
 }
 </script>
- 
+
 </body>
 </html>
