--- a/contact.html
+++ b/contact.html
@@ -6,18 +6,29 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+:root{
+  --primary:#c06c84;
+  --primary-soft:#f67280;
+  --bg:#f7f5f2;
+  --card:#ffffff;
+  --border:#e3e3e3;
+  --success:#25D366;
+}
+
+*{box-sizing:border-box}
+
 body{
-  font-family:"Segoe UI", Arial, sans-serif;
-  background:#f7f5f2;
   margin:0;
+  font-family:"Segoe UI", Arial, sans-serif;
+  background:var(--bg);
   color:#333;
 }
 
 /* HEADER */
 header{
-  background:linear-gradient(135deg,#c06c84,#f67280);
+  background:linear-gradient(135deg,var(--primary),var(--primary-soft));
   color:#fff;
-  padding:24px 16px;
+  padding:26px 16px;
   text-align:center;
 }
 header h1{margin:0;font-size:32px;}
@@ -33,71 +44,73 @@ nav a{
 section{
   max-width:900px;
   margin:30px auto;
-  background:#fff;
+  background:var(--card);
   padding:28px;
-  border-radius:16px;
-  box-shadow:0 8px 20px rgba(0,0,0,0.06);
+  border-radius:18px;
+  box-shadow:0 10px 22px rgba(0,0,0,0.06);
 }
 .no-top{margin-top:0;}
 .no-bottom{margin-bottom:0;}
 
-h2{margin-top:0;color:#444;}
+h2{margin-top:0;color:#444}
 
-/* CONTACT BOX */
-.contact-box p{margin:8px 0;font-size:15px;}
-.contact-box a{color:#c06c84;text-decoration:none;font-weight:600;}
-
-/* IMAGE — FULL, NO CROP, NO DISTORTION */
+/* CLINIC IMAGE */
 .hall-image{
   max-width:900px;
-  margin:20px auto;
-  text-align:center;
+  margin:22px auto;
 }
 .hall-image img{
   width:100%;
   height:auto;
-  display:block;
   border-radius:18px;
-  object-fit:contain;
+  display:block;
+}
+
+/* CONTACT INFO */
+.contact-box p{margin:8px 0}
+.contact-box a{
+  color:var(--primary);
+  text-decoration:none;
+  font-weight:600;
 }
 
 /* FORM */
-.note{font-size:14px;color:#666;margin-bottom:18px;}
-form{max-width:820px;margin:auto;}
+.note{
+  font-size:14px;
+  color:#666;
+  margin-bottom:18px;
+}
 
-/* QUERY / APPOINTMENT — 3 COLUMNS */
+form{max-width:820px;margin:auto}
+
+/* QUERY TYPE */
 .type-select{
   display:grid;
   grid-template-columns:repeat(3,1fr);
   gap:14px;
-  margin-bottom:26px;
+  margin-bottom:28px;
 }
 .type-select button{
   padding:16px;
-  font-size:15px;
   border-radius:14px;
-  border:2px solid #c06c84;
+  border:2px solid var(--primary);
   background:#fff;
-  cursor:pointer;
+  font-size:15px;
   font-weight:600;
-  transition:all 0.25s ease;
+  cursor:pointer;
+  transition:.25s;
 }
-
-/* Hover effect */
 .type-select button:hover{
-  background:#f67280;
+  background:var(--primary-soft);
   color:#fff;
-  transform:translateY(-2px);
 }
-
-/* Active state */
 .type-select button.active{
-  background:#c06c84;
+  background:var(--primary);
   color:#fff;
 }
 
-/* FORM FIELDS */
-label{display:block;margin-bottom:16px;font-weight:500;}
+/* INPUTS */
+label{display:block;margin-bottom:16px;font-weight:500}
 input,textarea{
   width:100%;
   padding:12px;
@@ -109,39 +122,58 @@ input,textarea{
 
 /* SERVICES */
 fieldset{
-  border:1px solid #ddd;
+  border:1px solid var(--border);
   padding:22px;
+  border-radius:16px;
   margin:26px 0;
-  border-radius:14px;
 }
-legend{font-weight:600;padding:0 10px;}
+legend{
+  padding:0 12px;
+  font-weight:600;
+}
 
 .services-grid{
   display:grid;
   grid-template-columns:repeat(3,1fr);
-  gap:10px 18px;
+  gap:14px;
 }
-.services-grid label{
+
+/* SERVICE CARD */
+.service-item{
+  border:2px solid var(--border);
+  border-radius:14px;
+  padding:12px 14px;
+  cursor:pointer;
+  transition:.25s;
   display:flex;
   gap:10px;
-  cursor:pointer;
+  align-items:center;
   font-size:14.5px;
+  background:#fff;
+}
+.service-item input{display:none}
+
+.service-item.selected{
+  background:rgba(192,108,132,.1);
+  border-color:var(--primary);
+  color:var(--primary);
+  font-weight:600;
 }
 
 /* SEND BUTTON */
 .send-btn{
   width:100%;
   padding:16px;
-  background:linear-gradient(135deg,#25D366,#1ebe5d);
-  color:#fff;
   border:none;
-  border-radius:16px;
+  border-radius:18px;
+  background:linear-gradient(135deg,var(--success),#1ebe5d);
+  color:#fff;
   font-size:17px;
   font-weight:600;
   cursor:pointer;
-  transition:transform 0.2s ease;
+  transition:.2s;
 }
-.send-btn:hover{transform:translateY(-2px);}
+.send-btn:hover{transform:translateY(-2px)}
 
 /* FOOTER */
 footer{
@@ -153,9 +185,9 @@ footer{
 
 /* RESPONSIVE */
 @media(max-width:768px){
-  header h1{font-size:26px;}
-  .type-select{grid-template-columns:1fr;}
-  .services-grid{grid-template-columns:1fr;}
+  header h1{font-size:26px}
+  .type-select{grid-template-columns:1fr}
+  .services-grid{grid-template-columns:1fr}
 }
 </style>
 </head>
@@ -179,21 +211,20 @@ footer{
 </section>
 
 <div class="hall-image">
-<img src="https://raw.githubusercontent.com/Aesthetics-SimranMalra/images/main/hall.jpeg" alt="Clinic Hall">
+<img src="https://raw.githubusercontent.com/Aesthetics-SimranMalra/images/main/hall.jpeg" alt="Clinic Interior">
 </div>
 
 <section class="no-top">
 <h2>Send Us a WhatsApp Message</h2>
-<p class="note">This form sends your message directly to our WhatsApp.</p>
+<p class="note">Your message will open directly in WhatsApp.</p>
 
 <form onsubmit="sendWhatsApp();return false;">
 
 <div class="type-select">
-<button type="button" id="btnQuery" onclick="setType('Query')">General Query</button>
-<button type="button" id="btnAppointment" onclick="setType('Appointment')">Book Appointment</button>
-<button type="button" onclick="setType('Consultation')">Consultation</button>
+<button type="button" onclick="setType(this,'Query')">General Query</button>
+<button type="button" onclick="setType(this,'Appointment')">Book Appointment</button>
+<button type="button" onclick="setType(this,'Consultation')">Consultation</button>
 </div>
-
 <input type="hidden" id="type">
 
 <label>Full Name *
@@ -211,49 +242,72 @@ footer{
 <p class="note">Please provide at least a phone number or email.</p>
 
 <fieldset>
-<legend>OUR SERVICES</legend>
+<legend>Our Services</legend>
+
 <div class="services-grid">
 
-<label><input type="checkbox" class="service" value="Customised Medi-Facials"> Customised Medi-Facials</label>
-<label><input type="checkbox" class="service" value="Jet Peel Facial"> Jet Peel Facial (Advanced Hydra)</label>
-<label><input type="checkbox" class="service" value="Hydrafacial"> Hydrafacial</label>
-<label><input type="checkbox" class="service" value="Microdermabrasion"> Microdermabrasion</label>
-<label><input type="checkbox" class="service" value="Vampire Facial"> Vampire Facial</label>
-<label><input type="checkbox" class="service" value="Laser Treatments"> Laser Treatments</label>
+<!-- NONE -->
+<div class="service-item" data-none>
+  <input type="checkbox" value="NONE / General Question">
+  NONE / General Question
+</div>
 
-<label><input type="checkbox" class="service" value="Microneedling"> Microneedling</label>
-<label><input type="checkbox" class="service" value="Laser Hair Reduction"> Laser Hair Reduction (LHR)</label>
-<label><input type="checkbox" class="service" value="Electrolysis"> Electrolysis (Laser for White Hair)</label>
-<label><input type="checkbox" class="service" value="HIFU"> Skin Tightening (HIFU)</label>
-<label><input type="checkbox" class="service" value="Skin Tag Removal"> Skin Tag Removal</label>
-<label><input type="checkbox" class="service" value="Mole Removal"> Mole Removal</label>
+<!-- FACIALS -->
+<div class="service-item"><input type="checkbox" value="Customised Medi-Facials">Customised Medi-Facials</div>
+<div class="service-item"><input type="checkbox" value="Jet Peel Facial (Advanced Hydra)">Jet Peel Facial (Advanced Hydra)</div>
+<div class="service-item"><input type="checkbox" value="Hydrafacial">Hydrafacial</div>
+<div class="service-item"><input type="checkbox" value="Microdermabrasion">Microdermabrasion</div>
+<div class="service-item"><input type="checkbox" value="Vampire Facial">Vampire Facial</div>
 
-<label><input type="checkbox" class="service" value="Ear-Lobe Repair"> Ear-Lobe Repair</label>
-<label><input type="checkbox" class="service" value="Wart Removal"> Wart Removal</label>
-<label><input type="checkbox" class="service" value="Dermaplaning"> Dermaplaning</label>
-<label><input type="checkbox" class="service" value="Pigmentation Treatment"> Pigmentation Treatment</label>
-<label><input type="checkbox" class="service" value="Dark Circle Treatment"> Dark Circle Treatment</label>
-<label><input type="checkbox" class="service" value="Full Body Polishing"> Full Body Polishing</label>
+<!-- LASERS -->
+<div class="service-item"><input type="checkbox" value="Laser Treatments">Laser Treatments</div>
+<div class="service-item"><input type="checkbox" value="Laser Hair Reduction (LHR)">Laser Hair Reduction (LHR)</div>
+<div class="service-item"><input type="checkbox" value="Electrolysis (Laser for White Hair)">Electrolysis (Laser for White Hair)</div>
+<div class="service-item"><input type="checkbox" value="Qswitch Laser (Tattoo / Freckles / Tone / Carbon / Open Pores)">
+  Q-Switch Laser (Tattoo, Freckles, Tone, Carbon, Open Pores)
+</div>
 
-<label><input type="checkbox" class="service" value="Melasma Treatment"> Melasma Treatment</label>
-<label><input type="checkbox" class="service" value="GFC Face"> GFC (for Face)</label>
-<label><input type="checkbox" class="service" value="GFC Hair"> GFC (for Hair)</label>
-<label><input type="checkbox" class="service" value="Xanthalasma"> Xanthalasma Treatment</label>
-<label><input type="checkbox" class="service" value="Acne Scar"> Acne Scar Treatment</label>
-<label><input type="checkbox" class="service" value="Anti-Aging Boosters"> Anti-Aging Boosters</label>
+<!-- SKIN -->
+<div class="service-item"><input type="checkbox" value="Microneedling">Microneedling</div>
+<div class="service-item"><input type="checkbox" value="Skin Tightening (HIFU)">Skin Tightening (HIFU)</div>
+<div class="service-item"><input type="checkbox" value="Skin Tag Removal">Skin Tag Removal</div>
+<div class="service-item"><input type="checkbox" value="Mole Removal">Mole Removal</div>
+<div class="service-item"><input type="checkbox" value="Wart Removal">Wart Removal</div>
+<div class="service-item"><input type="checkbox" value="Dermaplaning">Dermaplaning</div>
 
-<label><input type="checkbox" class="service" value="Semi Permanent Makeup"> Semi Permanent Make-up</label>
-<label><input type="checkbox" class="service" value="Microblading"> Microblading</label>
-<label><input type="checkbox" class="service" value="Nano Shading"> Nano Shading</label>
-<label><input type="checkbox" class="service" value="Lip Neutralisation"> Lip Neutralisation</label>
-<label><input type="checkbox" class="service" value="Lip Tint"> Lip Tint</label>
-<label><input type="checkbox" class="service" value="Eyelash Extension"> Eyelash Extension</label>
+<!-- PIGMENT / TONE -->
+<div class="service-item"><input type="checkbox" value="Pigmentation Treatment">Pigmentation Treatment</div>
+<div class="service-item"><input type="checkbox" value="Dark Circle Treatment">Dark Circle Treatment</div>
+<div class="service-item"><input type="checkbox" value="Melasma Treatment">Melasma Treatment</div>
+<div class="service-item"><input type="checkbox" value="Xanthalasma Treatment">Xanthalasma Treatment</div>
+<div class="service-item"><input type="checkbox" value="Acne Scar Treatment">Acne Scar Treatment</div>
 
-<label><input type="checkbox" class="service" value="Eyelash Lift"> Eyelash Lift</label>
-<label><input type="checkbox" class="service" value="BB Glow"> BB Glow Treatment</label>
-<label><input type="checkbox" class="service" value="Botox"> Botox</label>
-<label><input type="checkbox" class="service" value="Fillers"> Fillers</label>
-<label><input type="checkbox" class="service" value="Qswitch Laser"> Qswitch Laser (Tattoo / Freckles / Tone / Carbon / Open Pores)</label>
+<!-- BODY -->
+<div class="service-item"><input type="checkbox" value="Full Body Polishing">Full Body Polishing</div>
+
+<!-- GFC -->
+<div class="service-item"><input type="checkbox" value="GFC for Face">GFC (for Face)</div>
+<div class="service-item"><input type="checkbox" value="GFC for Hair">GFC (for Hair)</div>
+
+<!-- ANTI AGE -->
+<div class="service-item"><input type="checkbox" value="Anti-Aging Boosters">Anti-Aging Boosters</div>
+<div class="service-item"><input type="checkbox" value="Botox">Botox</div>
+<div class="service-item"><input type="checkbox" value="Fillers">Fillers</div>
+
+<!-- SEMI PERMANENT MAKEUP -->
+<div class="service-item"><input type="checkbox" value="Semi Permanent Make-up">Semi Permanent Make-up</div>
+<div class="service-item"><input type="checkbox" value="Microblading">Microblading</div>
+<div class="service-item"><input type="checkbox" value="Nano Shading">Nano Shading</div>
+<div class="service-item"><input type="checkbox" value="Lip Neutralisation">Lip Neutralisation</div>
+<div class="service-item"><input type="checkbox" value="Lip Tint">Lip Tint</div>
+
+<!-- LASHES -->
+<div class="service-item"><input type="checkbox" value="Eyelash Extension">Eyelash Extension</div>
+<div class="service-item"><input type="checkbox" value="Eyelash Lift">Eyelash Lift</div>
+
+<!-- OTHER -->
+<div class="service-item"><input type="checkbox" value="BB Glow Treatment">BB Glow Treatment</div>
+<div class="service-item"><input type="checkbox" value="Ear-Lobe Repair">Ear-Lobe Repair</div>
 
 </div>
 </fieldset>
@@ -267,15 +321,40 @@ footer{
 </section>
 
 <footer>
-<p>Results may vary from person to person. All treatments are performed after consultation.</p>
+<p>All treatments are provided after professional consultation. Results may vary.</p>
 </footer>
 
 <script>
-function setType(v){
-  document.getElementById("type").value=v;
+function setType(btn,val){
+  document.getElementById("type").value=val;
   document.querySelectorAll(".type-select button").forEach(b=>b.classList.remove("active"));
-  event.target.classList.add("active");
+  btn.classList.add("active");
 }
+
+/* SERVICES LOGIC */
+const items=document.querySelectorAll(".service-item");
+items.forEach(item=>{
+  item.addEventListener("click",()=>{
+    const checkbox=item.querySelector("input");
+    checkbox.checked=!checkbox.checked;
+    item.classList.toggle("selected",checkbox.checked);
+
+    const isNone=item.hasAttribute("data-none");
+    if(isNone && checkbox.checked){
+      items.forEach(i=>{
+        if(!i.hasAttribute("data-none")){
+          i.classList.remove("selected");
+          i.querySelector("input").checked=false;
+        }
+      });
+    }
+    if(!isNone && checkbox.checked){
+      const noneItem=document.querySelector("[data-none]");
+      noneItem.classList.remove("selected");
+      noneItem.querySelector("input").checked=false;
+    }
+  });
+});
 
 function sendWhatsApp(){
   const type=document.getElementById("type").value;
@@ -283,10 +362,13 @@ function sendWhatsApp(){
   const phone=document.getElementById("phone").value.trim();
   const email=document.getElementById("email").value.trim();
   const msg=document.getElementById("message").value.trim();
-  if(!type){alert("Select Query / Appointment");return;}
+
+  if(!type){alert("Please select query type");return;}
   if(!phone && !email){alert("Provide phone or email");return;}
 
-  const services=[...document.querySelectorAll(".service:checked")].map(s=>s.value).join(", ")||"Not specified";
+  const services=[...document.querySelectorAll(".service-item.selected input")]
+    .map(i=>i.value).join(", ")||"Not specified";
+
   const text=`*Type:* ${type}\n*Name:* ${name}\n*Phone:* ${phone||"—"}\n*Email:* ${email||"—"}\n*Services:* ${services}\n\n${msg||"—"}`;
   window.open("https://wa.me/918108108042?text="+encodeURIComponent(text),"_blank");
 }
