--- a/contact.html
+++ b/contact.html
@@ -56,14 +56,15 @@ h2{margin-top:0;color:#444}
 
 /* CLINIC IMAGE */
 .hall-image{
-  max-width:900px;
-  margin:22px auto;
+  max-width:760px;
+  margin:18px auto;
 }
+
 .hall-image img{
   width:100%;
-  height:auto;
+  max-height:420px;
+  object-fit:cover;
   border-radius:18px;
-  display:block;
 }
 
 /* CONTACT INFO */
