--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,10 @@
 <style>
 :root{
   --primary:#c06c84;
-  --primary-soft:#f67280;
+  --primary-soft:#f3b6c2;
   --bg:#f7f5f2;
   --card:#ffffff;
-  --border:#e3e3e3;
+  --border:#e6e6e6;
   --success:#25D366;
 }
 
@@ -19,60 +19,64 @@
 
 body{
   margin:0;
-  font-family:"Segoe UI", Arial, sans-serif;
+  font-family:"Segoe UI", system-ui, -apple-system, sans-serif;
   background:var(--bg);
   color:#333;
+  line-height:1.6;
 }
 
 /* HEADER */
 header{
-  background:linear-gradient(135deg,var(--primary),var(--primary-soft));
+  background:linear-gradient(135deg,var(--primary),#d98aa0);
   color:#fff;
-  padding:26px 16px;
+  padding:32px 16px;
   text-align:center;
 }
-header h1{margin:0;font-size:32px;}
-nav{margin-top:10px;}
+header h1{margin:0;font-size:34px;letter-spacing:.3px}
+nav{margin-top:12px}
 nav a{
   color:#fff;
-  margin:0 12px;
+  margin:0 14px;
   text-decoration:none;
-  font-weight:600;
+  font-weight:500;
+  opacity:.9;
 }
+nav a:hover{opacity:1}
 
 /* SECTIONS */
 section{
   max-width:900px;
-  margin:30px auto;
+  margin:34px auto;
   background:var(--card);
-  padding:28px;
-  border-radius:18px;
-  box-shadow:0 10px 22px rgba(0,0,0,0.06);
+  padding:32px;
+  border-radius:20px;
+  box-shadow:0 14px 30px rgba(0,0,0,.07);
 }
-.no-top{margin-top:0;}
-.no-bottom{margin-bottom:0;}
 
-h2{margin-top:0;color:#444}
+h2{
+  margin-top:0;
+  color:#444;
+  font-size:24px;
+}
 
-/* CLINIC IMAGE */
+/* IMAGE */
 .hall-image{
-  max-width:760px;
-  margin:18px auto;
+  margin:24px auto 0;
 }
-
 .hall-image img{
   width:100%;
   max-height:420px;
   object-fit:cover;
   border-radius:18px;
+  box-shadow:0 10px 24px rgba(0,0,0,.12);
 }
 
 /* CONTACT INFO */
 .contact-box p{margin:8px 0}
 .contact-box a{
   color:var(--primary);
-  text-decoration:none;
   font-weight:600;
+  text-decoration:none;
 }
 
 /* FORM */
@@ -81,8 +85,6 @@ h2{margin-top:0;color:#444}
   color:#666;
   margin-bottom:18px;
 }
-
-form{max-width:820px;margin:auto}
 
 /* QUERY TYPE */
 .type-select{
@@ -93,8 +95,8 @@ form{max-width:820px;margin:auto}
 }
 .type-select button{
   padding:16px;
-  border-radius:14px;
-  border:2px solid var(--primary);
+  border-radius:16px;
+  border:1px solid var(--border);
   background:#fff;
   font-size:15px;
   font-weight:600;
@@ -103,20 +105,20 @@ form{max-width:820px;margin:auto}
 }
 .type-select button:hover{
   background:var(--primary-soft);
-  color:#fff;
 }
 .type-select button.active{
   background:var(--primary);
   color:#fff;
+  border-color:var(--primary);
 }
 
 /* INPUTS */
-label{display:block;margin-bottom:16px;font-weight:500}
+label{display:block;margin-bottom:18px;font-weight:500}
 input,textarea{
   width:100%;
-  padding:12px;
+  padding:14px;
   margin-top:6px;
-  border-radius:10px;
+  border-radius:12px;
   border:1px solid #ccc;
   font-size:15px;
 }
@@ -124,44 +126,43 @@ input,textarea{
 /* SERVICES */
 fieldset{
   border:1px solid var(--border);
-  padding:22px;
-  border-radius:16px;
-  margin:26px 0;
+  padding:26px;
+  border-radius:18px;
+  margin:30px 0;
 }
 legend{
-  padding:0 12px;
+  padding:0 14px;
   font-weight:600;
 }
 
 .services-grid{
   display:grid;
-  grid-template-columns:repeat(3,1fr);
-  gap:14px;
+  grid-template-columns:repeat(auto-fill,minmax(220px,1fr));
+  gap:16px;
 }
 
 /* SERVICE CARD */
 .service-item{
-  border:2px solid var(--border);
+  border:1px solid var(--border);
   border-radius:14px;
-  padding:12px 14px;
+  padding:14px 16px;
   cursor:pointer;
   transition:.25s;
-  display:flex;
-  gap:10px;
-  align-items:center;
-  font-size:14px;
   background:#fff;
+  font-size:14px;
+  display:flex;
+  align-items:center;
+  min-height:68px;
 }
 .service-item input{display:none}
 
-.service-item{
-  min-height:64px;
-  align-items:center;
+.service-item:hover{
+  border-color:var(--primary-soft);
+  background:#fff7f9;
 }
 
-  
 .service-item.selected{
-  background:rgba(192,108,132,.1);
+  background:rgba(192,108,132,.12);
   border-color:var(--primary);
   color:var(--primary);
   font-weight:600;
@@ -170,31 +171,33 @@ legend{
 /* SEND BUTTON */
 .send-btn{
   width:100%;
-  padding:16px;
+  padding:18px;
   border:none;
-  border-radius:18px;
+  border-radius:20px;
   background:linear-gradient(135deg,var(--success),#1ebe5d);
   color:#fff;
-  font-size:17px;
+  font-size:18px;
   font-weight:600;
   cursor:pointer;
-  transition:.2s;
+  transition:.25s;
 }
-.send-btn:hover{transform:translateY(-2px)}
+.send-btn:hover{
+  transform:translateY(-2px);
+  box-shadow:0 8px 18px rgba(37,211,102,.35);
+}
 
 /* FOOTER */
 footer{
   text-align:center;
   font-size:14px;
   color:#777;
-  padding:24px 10px;
+  padding:28px 10px;
 }
 
 /* RESPONSIVE */
 @media(max-width:768px){
   header h1{font-size:26px}
   .type-select{grid-template-columns:1fr}
-  .services-grid{grid-template-columns:1fr}
 }
 </style>
 </head>
