--- a/contact.html
+++ b/contact.html
@@ -7,199 +7,218 @@
 
 <style>
 :root{
-  --primary:#c06c84;
-  --primary-soft:#f3b6c2;
-  --bg:#f7f5f2;
-  --card:#ffffff;
-  --border:#e6e6e6;
-  --success:#25D366;
+  --accent:#c3a6ad;
+  --accent-dark:#a9858f;
+  --bg:#f6f4f1;
+  --card:rgba(255,255,255,.85);
+  --text:#2f2f2f;
+  --muted:#777;
+  --success:#1fa855;
 }
 
 *{box-sizing:border-box}
 
 body{
   margin:0;
-  font-family:"Segoe UI", system-ui, -apple-system, sans-serif;
+  font-family:"Inter","Segoe UI",system-ui,-apple-system,sans-serif;
   background:var(--bg);
-  color:#333;
-  line-height:1.6;
+  color:var(--text);
+  line-height:1.7;
 }
 
 /* HEADER */
 header{
-  background:linear-gradient(135deg,var(--primary),#d98aa0);
-  color:#fff;
-  padding:32px 16px;
+  background:linear-gradient(135deg,#c9a5ae,#e6cfd5);
+  padding:44px 16px;
   text-align:center;
 }
-header h1{margin:0;font-size:34px;letter-spacing:.3px}
-nav{margin-top:12px}
+header h1{
+  margin:0;
+  font-size:36px;
+  font-weight:600;
+  letter-spacing:.4px;
+  color:#2e2e2e;
+}
+nav{
+  margin-top:14px;
+}
 nav a{
-  color:#fff;
   margin:0 14px;
   text-decoration:none;
+  color:#3c3c3c;
   font-weight:500;
-  opacity:.9;
+  opacity:.8;
 }
 nav a:hover{opacity:1}
 
 /* SECTIONS */
 section{
   max-width:900px;
-  margin:34px auto;
+  margin:40px auto;
+  padding:38px;
+  border-radius:26px;
   background:var(--card);
-  padding:32px;
-  border-radius:20px;
-  box-shadow:0 14px 30px rgba(0,0,0,.07);
+  backdrop-filter:blur(6px);
+  box-shadow:
+    0 20px 45px rgba(0,0,0,.08);
 }
 
+/* HEADINGS */
 h2{
   margin-top:0;
-  color:#444;
-  font-size:24px;
+  font-size:26px;
+  font-weight:600;
+  letter-spacing:.3px;
 }
 
 /* IMAGE */
 .hall-image{
-  margin:24px auto 0;
+  margin-top:28px;
 }
 .hall-image img{
   width:100%;
   max-height:420px;
   object-fit:cover;
-  border-radius:18px;
-  box-shadow:0 10px 24px rgba(0,0,0,.12);
+  border-radius:22px;
+  box-shadow:0 18px 40px rgba(0,0,0,.18);
 }
 
-/* CONTACT INFO */
-.contact-box p{margin:8px 0}
+/* TEXT */
+.contact-box p{
+  margin:10px 0;
+  font-size:15px;
+}
 .contact-box a{
-  color:var(--primary);
+  color:var(--accent-dark);
   font-weight:600;
   text-decoration:none;
 }
 
-/* FORM */
+/* NOTE */
 .note{
   font-size:14px;
-  color:#666;
-  margin-bottom:18px;
+  color:var(--muted);
+  margin-bottom:22px;
 }
 
 /* QUERY TYPE */
 .type-select{
   display:grid;
   grid-template-columns:repeat(3,1fr);
-  gap:14px;
-  margin-bottom:28px;
+  gap:16px;
+  margin-bottom:34px;
 }
 .type-select button{
-  padding:16px;
-  border-radius:16px;
-  border:1px solid var(--border);
+  padding:18px;
+  border:none;
+  border-radius:22px;
   background:#fff;
   font-size:15px;
-  font-weight:600;
+  font-weight:500;
   cursor:pointer;
-  transition:.25s;
+  box-shadow:0 8px 22px rgba(0,0,0,.08);
+  transition:.3s;
 }
 .type-select button:hover{
-  background:var(--primary-soft);
+  transform:translateY(-2px);
 }
 .type-select button.active{
-  background:var(--primary);
+  background:linear-gradient(135deg,var(--accent),var(--accent-dark));
   color:#fff;
-  border-color:var(--primary);
 }
 
 /* INPUTS */
-label{display:block;margin-bottom:18px;font-weight:500}
+label{
+  display:block;
+  margin-bottom:22px;
+  font-weight:500;
+}
 input,textarea{
   width:100%;
-  padding:14px;
-  margin-top:6px;
-  border-radius:12px;
-  border:1px solid #ccc;
+  padding:16px;
+  margin-top:8px;
+  border-radius:18px;
+  border:none;
+  background:#fff;
   font-size:15px;
+  box-shadow:inset 0 0 0 1px #ddd;
+}
+input:focus,textarea:focus{
+  outline:none;
+  box-shadow:0 0 0 2px var(--accent);
 }
 
 /* SERVICES */
 fieldset{
-  border:1px solid var(--border);
-  padding:26px;
-  border-radius:18px;
-  margin:30px 0;
+  border:none;
+  margin:36px 0;
+  padding:0;
 }
 legend{
-  padding:0 14px;
   font-weight:600;
+  margin-bottom:18px;
 }
 
 .services-grid{
   display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(220px,1fr));
-  gap:16px;
+  grid-template-columns:repeat(auto-fill,minmax(230px,1fr));
+  gap:18px;
 }
 
-/* SERVICE CARD */
+/* SERVICE ITEM */
 .service-item{
-  border:1px solid var(--border);
-  border-radius:14px;
-  padding:14px 16px;
-  cursor:pointer;
-  transition:.25s;
+  padding:18px;
+  border-radius:20px;
   background:#fff;
+  cursor:pointer;
   font-size:14px;
-  display:flex;
-  align-items:center;
-  min-height:68px;
+  transition:.3s;
+  box-shadow:0 10px 26px rgba(0,0,0,.08);
 }
 .service-item input{display:none}
 
 .service-item:hover{
-  border-color:var(--primary-soft);
-  background:#fff7f9;
+  transform:translateY(-3px);
 }
 
 .service-item.selected{
-  background:rgba(192,108,132,.12);
-  border-color:var(--primary);
-  color:var(--primary);
+  background:linear-gradient(135deg,#f2dfe4,#ecd1d8);
   font-weight:600;
 }
 
 /* SEND BUTTON */
 .send-btn{
   width:100%;
-  padding:18px;
+  padding:20px;
   border:none;
-  border-radius:20px;
-  background:linear-gradient(135deg,var(--success),#1ebe5d);
-  color:#fff;
+  border-radius:26px;
   font-size:18px;
   font-weight:600;
+  color:#fff;
+  background:linear-gradient(135deg,var(--success),#168f48);
   cursor:pointer;
-  transition:.25s;
+  transition:.3s;
 }
 .send-btn:hover{
-  transform:translateY(-2px);
-  box-shadow:0 8px 18px rgba(37,211,102,.35);
+  transform:translateY(-3px);
+  box-shadow:0 14px 30px rgba(31,168,85,.35);
 }
 
 /* FOOTER */
 footer{
   text-align:center;
   font-size:14px;
-  color:#777;
-  padding:28px 10px;
+  color:#666;
+  padding:30px 12px;
 }
 
 /* RESPONSIVE */
 @media(max-width:768px){
-  header h1{font-size:26px}
+  header h1{font-size:28px}
   .type-select{grid-template-columns:1fr}
 }
 </style>
+
 </head>
 
 <body>
@@ -215,14 +234,14 @@ footer{
 </header>
 
 <section class="contact-box no-bottom">
-<h2>Clinic Details</h2>
-<p><strong>Address:</strong> Barnala Road, near Bhuman Shah Chowk, Sirsa, Haryana</p>
-<p><strong>Phone / WhatsApp:</strong> <a href="tel:+918108108042">+91 81081 08042</a></p>
-</section>
+  <h2>Clinic Details</h2>
+  <p><strong>Address:</strong> Barnala Road, near Bhuman Shah Chowk, Sirsa, Haryana</p>
+  <p><strong>Phone / WhatsApp:</strong> <a href="tel:+918108108042">+91 81081 08042</a></p>
 
-<div class="hall-image">
-<img src="https://raw.githubusercontent.com/Aesthetics-SimranMalra/images/main/hall.jpeg" alt="Clinic Interior">
-</div>
+  <div class="hall-image">
+    <img src="https://raw.githubusercontent.com/Aesthetics-SimranMalra/images/main/hall.jpeg" alt="Clinic Interior">
+  </div>
+</section>
 
 <section class="no-top">
 <h2>Send Us a WhatsApp Message</h2>
