--- a/contact.html
+++ b/contact.html
@@ -152,21 +152,21 @@ legend{
 
 .services-grid{
   display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(230px,1fr));
-  gap:18px;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:20px;
 }
 
-/* SERVICE ITEM */
 .service-item{
-  padding:18px;
+  padding:18px 20px;
   border-radius:20px;
   background:#fff;
   cursor:pointer;
-  font-size:14px;
+  font-size:14.5px;
   transition:.3s;
   box-shadow:0 10px 26px rgba(0,0,0,.08);
 }
-.service-item input{display:none}
+
+  .service-item input{display:none}
 
 .service-item:hover{
   transform:translateY(-3px);
