--- a/contact.html
+++ b/contact.html
@@ -152,9 +152,10 @@ legend{
 
 .services-grid{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:20px;
+  grid-template-columns:repeat(2, 1fr);
+  gap:24px;
 }
+
 
 .service-item{
   padding:18px 20px;
@@ -204,10 +205,12 @@ footer{
 }
 
 /* RESPONSIVE */
-@media(max-width:768px){
-  header h1{font-size:28px}
-  .type-select{grid-template-columns:1fr}
+@media (max-width:768px){
+  .services-grid{
+    grid-template-columns:1fr;
+  }
 }
+
 </style>
 
 </head>
