--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   --accent:#c3a6ad;
   --accent-dark:#a9858f;
   --bg:#f6f4f1;
-  --card:rgba(255,255,255,.85);
+  --card:#ffffff;
   --text:#2f2f2f;
   --muted:#777;
   --success:#1fa855;
@@ -20,24 +20,22 @@
 
 body{
   margin:0;
-  font-family:"Inter","Segoe UI",system-ui,-apple-system,sans-serif;
+  font-family:Inter, "Segoe UI", system-ui, sans-serif;
   background:var(--bg);
   color:var(--text);
-  line-height:1.7;
+  line-height:1.65;
 }
 
 /* HEADER */
 header{
   background:linear-gradient(135deg,#c9a5ae,#e6cfd5);
-  padding:44px 16px;
+  padding:42px 16px;
   text-align:center;
 }
 header h1{
   margin:0;
-  font-size:36px;
+  font-size:34px;
   font-weight:600;
-  letter-spacing:.4px;
-  color:#2e2e2e;
 }
 nav{
   margin-top:14px;
@@ -45,35 +43,51 @@ nav{
 nav a{
   margin:0 14px;
   text-decoration:none;
-  color:#3c3c3c;
+  color:#333;
   font-weight:500;
-  opacity:.8;
+  opacity:.85;
 }
 nav a:hover{opacity:1}
 
-/* SECTIONS */
+/* SECTION */
 section{
   max-width:900px;
   margin:40px auto;
-  padding:38px;
-  border-radius:26px;
+  padding:36px;
   background:var(--card);
-  backdrop-filter:blur(6px);
-  box-shadow:
-    0 20px 45px rgba(0,0,0,.08);
+  border-radius:24px;
+  box-shadow:0 18px 40px rgba(0,0,0,.08);
 }
 
 /* HEADINGS */
 h2{
   margin-top:0;
-  font-size:26px;
+  font-size:24px;
   font-weight:600;
-  letter-spacing:.3px;
 }
 
-.hall-image{ margin:32px auto 0; max-width:680px; } 
+/* CLINIC IMAGE */
+.hall-image{
+  margin:28px auto 0;
+  max-width:680px;
+}
+.hall-image::before{
+  content:"";
+  display:block;
+  width:56px;
+  height:3px;
+  background:var(--accent);
+  margin:0 auto 18px;
+  border-radius:3px;
+}
+.hall-image img{
+  width:100%;
+  height:280px;
+  object-fit:cover;
+  border-radius:22px;
+  box-shadow:0 14px 30px rgba(0,0,0,.18);
+}
 
-  .hall-image img{ width:100%; height:280px; object-fit:cover; border-radius:26px; box-shadow:0 12px 28px rgba(0,0,0,.15); } .hall-image::before{ content:""; display:block; width:60px; height:3px; background:#c3a6ad; margin:0 auto 20px; border-radius:3px; }
 /* TEXT */
 .contact-box p{
   margin:10px 0;
@@ -85,11 +99,11 @@ h2{
   text-decoration:none;
 }
 
-/* NOTE */
+/* NOTES */
 .note{
   font-size:14px;
   color:var(--muted);
-  margin-bottom:22px;
+  margin-bottom:20px;
 }
 
 /* QUERY TYPE */
@@ -97,103 +111,92 @@ h2{
   display:grid;
   grid-template-columns:repeat(3,1fr);
   gap:16px;
-  margin-bottom:34px;
+  margin-bottom:30px;
 }
 .type-select button{
-  padding:18px;
+  padding:16px;
   border:none;
-  border-radius:22px;
-  background:#fff;
+  border-radius:18px;
+  background:#f7f7f7;
   font-size:15px;
-  font-weight:500;
   cursor:pointer;
-  box-shadow:0 8px 22px rgba(0,0,0,.08);
-  transition:.3s;
-}
-.type-select button:hover{
-  transform:translateY(-2px);
+  transition:.25s;
 }
 .type-select button.active{
-  background:linear-gradient(135deg,var(--accent),var(--accent-dark));
+  background:var(--accent);
   color:#fff;
 }
 
 /* INPUTS */
 label{
   display:block;
-  margin-bottom:22px;
+  margin-bottom:20px;
   font-weight:500;
 }
 input,textarea{
   width:100%;
-  padding:16px;
-  margin-top:8px;
-  border-radius:18px;
-  border:none;
-  background:#fff;
+  padding:14px;
+  margin-top:6px;
+  border-radius:14px;
+  border:1px solid #ddd;
   font-size:15px;
-  box-shadow:inset 0 0 0 1px #ddd;
 }
 input:focus,textarea:focus{
   outline:none;
-  box-shadow:0 0 0 2px var(--accent);
+  border-color:var(--accent);
 }
 
 /* SERVICES */
 fieldset{
   border:none;
-  margin:36px 0;
+  margin:34px 0;
   padding:0;
 }
 legend{
   font-weight:600;
-  margin-bottom:18px;
+  margin-bottom:12px;
 }
 
 .services-grid{
   display:grid;
-  grid-template-columns:repeat(2, 1fr);
-  gap:24px;
+  grid-template-columns:repeat(2,1fr);
+  gap:18px 26px;
 }
 
-
+/* SERVICE CARD */
 .service-item{
-  padding:18px 20px;
-  border-radius:20px;
-  background:#fff;
-  cursor:pointer;
+  padding:16px 18px;
+  border-radius:18px;
+  background:#fafafa;
   font-size:14.5px;
-  transition:.3s;
-  box-shadow:0 10px 26px rgba(0,0,0,.08);
+  cursor:pointer;
+  border:1px solid #e6e6e6;
+  transition:.2s;
 }
-
-  .service-item input{display:none}
-
+.service-item input{display:none}
 .service-item:hover{
-  transform:translateY(-3px);
+  border-color:var(--accent);
 }
-
 .service-item.selected{
-  background:linear-gradient(135deg,#f2dfe4,#ecd1d8);
+  background:#f2dfe4;
+  border-color:var(--accent);
   font-weight:600;
 }
 
 /* SEND BUTTON */
 .send-btn{
   width:100%;
-  padding:20px;
+  padding:18px;
   border:none;
-  border-radius:26px;
-  font-size:18px;
+  border-radius:22px;
+  font-size:17px;
   font-weight:600;
   color:#fff;
   background:linear-gradient(135deg,var(--success),#168f48);
   cursor:pointer;
-  transition:.3s;
 }
 .send-btn:hover{
-  transform:translateY(-3px);
-  box-shadow:0 14px 30px rgba(31,168,85,.35);
+  opacity:.95;
 }
 
 /* FOOTER */
@@ -204,15 +207,13 @@ footer{
   padding:30px 12px;
 }
 
-/* RESPONSIVE */
-@media (max-width:768px){
-  .services-grid{
-    grid-template-columns:1fr;
-  }
+/* MOBILE */
+@media(max-width:768px){
+  .services-grid{grid-template-columns:1fr}
+  .type-select{grid-template-columns:1fr}
+  header h1{font-size:26px}
 }
-
 </style>
-
 </head>
 
 <body>
@@ -227,17 +228,17 @@ footer{
 </nav>
 </header>
 
-<section class="contact-box no-bottom">
-  <h2>Clinic Details</h2>
-  <p><strong>Address:</strong> Barnala Road, near Bhuman Shah Chowk, Sirsa, Haryana</p>
-  <p><strong>Phone / WhatsApp:</strong> <a href="tel:+918108108042">+91 81081 08042</a></p>
+<section class="contact-box">
+<h2>Clinic Details</h2>
+<p><strong>Address:</strong> Barnala Road, near Bhuman Shah Chowk, Sirsa, Haryana</p>
+<p><strong>Phone / WhatsApp:</strong> <a href="tel:+918108108042">+91 81081 08042</a></p>
 
-  <div class="hall-image">
-    <img src="https://raw.githubusercontent.com/Aesthetics-SimranMalra/images/main/hall.jpeg" alt="Clinic Interior">
-  </div>
+<div class="hall-image">
+  <img src="https://raw.githubusercontent.com/Aesthetics-SimranMalra/images/main/hall.jpeg" alt="Clinic Interior">
+</div>
 </section>
 
-<section class="no-top">
+<section>
 <h2>Send Us a WhatsApp Message</h2>
 <p class="note">Your message will open directly in WhatsApp.</p>
 
@@ -334,7 +335,7 @@ footer{
 
 </div>
 </fieldset>
-
+  
 <label>Your Message
 <textarea id="message" rows="6"></textarea>
 </label>
@@ -354,7 +355,6 @@ function setType(btn,val){
   btn.classList.add("active");
 }
 
-/* SERVICES LOGIC */
 const items=document.querySelectorAll(".service-item");
 items.forEach(item=>{
   item.addEventListener("click",()=>{
@@ -399,3 +399,8 @@ function sendWhatsApp(){
 
 </body>
 </html>
+
+
+
+
+
