--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   --light:#faf8f6;
   --muted:#6f6f6f;
   --shadow:0 12px 35px rgba(0,0,0,0.08);
-  --btn-hover:#b05270;
 }
 
 *{margin:0;padding:0;box-sizing:border-box;}
@@ -42,9 +41,7 @@ header h1{
   font-size:18px;
   color:var(--muted);
 }
-nav{
-  margin-top:12px;
-}
+nav{margin-top:12px;}
 nav a{
   text-decoration:none;
   margin-right:22px;
@@ -87,32 +84,48 @@ nav a:hover{color:var(--primary);}
   font-weight:600;
 }
 
-/* NEW SERVICES BLOCK */
-.new-services-wrapper{
-  margin-top:45px;              /* GAP from button */
-  text-align:center;
+/* NEW SERVICES AREA */
+.new-services-area{
+  margin-top:50px;
+  padding:30px 20px;
+  max-width:520px;
 }
 
 .new-services-title{
   display:inline-block;
-  padding:8px 22px;
+  padding:8px 24px;
   background:var(--secondary);
   border-radius:30px;
   font-weight:600;
   color:var(--primary);
-  margin-bottom:14px;
+  margin-bottom:22px;
 }
 
-.new-services-blink{
+.new-services-cloud{
+  display:flex;
+  flex-wrap:wrap;
+  gap:14px 22px;
+}
+
+/* individual items */
+.service-chip{
   font-size:15px;
   font-weight:600;
   color:var(--dark);
-  animation:blink 1.8s infinite;
+  opacity:0.85;
+  animation:pulse 2.2s infinite;
 }
 
-@keyframes blink{
+/* staggered blinking */
+.service-chip:nth-child(2){animation-delay:.4s;}
+.service-chip:nth-child(3){animation-delay:.8s;}
+.service-chip:nth-child(4){animation-delay:1.2s;}
+.service-chip:nth-child(5){animation-delay:1.6s;}
+.service-chip:nth-child(6){animation-delay:2s;}
+
+@keyframes pulse{
   0%{opacity:1;}
-  50%{opacity:0.4;}
+  50%{opacity:0.35;}
   100%{opacity:1;}
 }
 
@@ -132,7 +145,7 @@ section h2{
   margin-bottom:35px;
 }
 
-/* SERVICES */
+/* SERVICES LIST */
 .services-list{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
@@ -144,6 +157,15 @@ section h2{
   padding:30px;
   border-radius:18px;
   box-shadow:var(--shadow);
+}
+
+/* DISCLAIMER */
+.disclaimer{
+  max-width:900px;
+  margin:60px auto 0;
+  font-size:15px;
+  color:var(--muted);
+  line-height:1.8;
 }
 
 /* FOOTER */
@@ -158,6 +180,7 @@ footer a{color:var(--primary);}
 /* RESPONSIVE */
 @media(max-width:900px){
   .hero{grid-template-columns:1fr;text-align:center;}
+  .new-services-area{margin-left:auto;margin-right:auto;}
 }
 </style>
 </head>
@@ -182,11 +205,17 @@ footer a{color:var(--primary);}
 
     <a class="btn" href="contact.html">Book Appointment</a>
 
-    <!-- NEW SERVICES BELOW BUTTON -->
-    <div class="new-services-wrapper">
+    <!-- NEW SERVICES -->
+    <div class="new-services-area">
       <div class="new-services-title">✨ New Services</div>
-      <div class="new-services-blink">
-        Q-Switch Laser • Tattoo Removal • Freckles • Uneven Tone • Carbon Laser • Open Pores
+
+      <div class="new-services-cloud">
+        <span class="service-chip">Q-Switch Laser</span>
+        <span class="service-chip">Tattoo Removal</span>
+        <span class="service-chip">Freckles</span>
+        <span class="service-chip">Uneven Tone</span>
+        <span class="service-chip">Carbon Laser</span>
+        <span class="service-chip">Open Pores</span>
       </div>
     </div>
   </div>
@@ -206,6 +235,16 @@ footer a{color:var(--primary);}
     <li>Anti-Aging, Botox & Fillers</li>
     <li>Semi-Permanent Make-Up</li>
   </ul>
+</section>
+
+<!-- DISCLAIMER -->
+<section class="disclaimer">
+  <p>
+    <strong>Each face is unique.</strong> Skin type, concerns, lifestyle, and response to treatment vary from person to person.
+    All procedures are performed only after a detailed professional consultation and assessment.
+    Results, recovery time, and outcomes may differ, and no treatment guarantees identical results for every individual.
+    Our focus is always on safety, suitability, and natural-looking enhancement.
+  </p>
 </section>
 
 <footer>
